--- a/public/back/css/commont.less
+++ b/public/back/css/commont.less
@@ -102,6 +102,7 @@ a:active{
 // 右侧主体部分
 // 头部
 .it_main{
+  height: 1000px;
   padding-left:180px;
   transition: all 1s;
   .lt_topbar{
@@ -135,6 +136,9 @@ a:active{
 .it_main.hidemenu{
   padding-left:0;
 }
+// echarts
+.echart{
+  padding-left:20px;
+}
 
-// 模态框
 
