用户管理页面完成

--- a/public/back/css/commont.less
+++ b/public/back/css/commont.less
@@ -141,4 +141,11 @@ a:active{
   padding-left:20px;
 }
 
+// 表格
+.table.table-bordered th,
+.table.table-bordered td{
+  text-align:center;
+  vertical-align:middle;
+}
+
 
