--- a/public/back/css/commont.css
+++ b/public/back/css/commont.css
@@ -125,3 +125,8 @@ a:active {
 .echart {
   padding-left: 20px;
 }
+.table.table-bordered th,
+.table.table-bordered td {
+  text-align: center;
+  vertical-align: middle;
+}
